backend/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: backend
  namespace: production
  labels:
    app: backend
spec:
  replicas: 3
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: 804136008051.dkr.ecr.us-east-1.amazonaws.com/backend:v1
          ports:
            - name: http
              containerPort: 3500
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3500
            initialDelaySeconds: 2
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /ready
              port: 3500
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
          startupProbe:
            httpGet:
              path: /started
              port: 3500
            initialDelaySeconds: 0
            periodSeconds: 10
            failureThreshold: 30
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: '1'
              memory: 1Gi

  strategy:
    blueGreen:
      activeService: backend-active
      previewService: backend-preview

      prePromotionAnalysis:
        templates:
          - templateName: backend-health-check
        args:
          - name: service-name
            value: backend-preview

      postPromotionAnalysis:
        templates:
          - templateName: backend-health-check
        args:
          - name: service-name
            value: backend-active

      autoPromotionEnabled: false
      scaleDownDelaySeconds: 300
      previewReplicaCount: 3
      antiAffinity:
        requiredDuringSchedulingIgnoredDuringExecution: {}
