backend/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-active
  namespace: production
spec:
  selector:
    app: backend
  ports:
    - name: http          # <-- added
      port: 80
      targetPort: 3500
